Run-AlValidation to support urls as apps, previousapps and installapps
Add parameter CopySymbolsFromContainer to Compile-AppInBcContainer to speed up symbols download
Use CopySymbolsFromContainer in Run-AlCops
Issue #1568 Add publisher parameter to Unpublish and Uninstall app
Issue #1566 Sign-BcContainerApp doesn't work with SHA256
Retry algorithm added to Sign-BcContainerApp

1.0.17
Issue #1494 Creating another container based on existing artifact
Add additional information when publishing through dev Endpoint (instead of just Unprocessible Entity)
Issue #1530 Not able to Run-AlValidation without previous app.
Issue #1537 Issue with file lock when creating image
Use configured containerName in Run-AlCops and Run-AlValidation
Add parameter -skipAppSourceCop to Run-AlValidation
Add mapCountryCode to $bcContainerHelperConfig
Use mapCountryCode in Get-BcArtifactUrl to allow getting artifacts for countries which doesn't have own artifacts
Use mapCountryCode in Run-AlValidation to allow running validation for all countries (max. 1 time per artifact)
Issue #1536 Random running Test failure
Run-AlValidation use single tenant containers by default for performance
Add resilience to ClientContext::GetAllForms
Issue #1550 and #1497 add digestAlgorithm parameter to Sign-BcContainerApp
Run-AlCops (and Run-AlValidation) could ignore error AS0088
Issue #1552 PowerShell sometimes uses 8-3 notation for $env:temp

1.0.16
Issue #1516 Sort-AppFoldersByDependencies can't handle twice the same app in the baseFolder
Issue #1519 Extract-AppFileToFolder doesn't extract internalsVisibleTo in app.json
Add parameter -SkipUpgrade to allow Run-AlValidation to skip upgrade if previousApps cannot be installed on current version
Issue #1522 Move files to correct positions
Issue #1517 Traefik with Run-AlValidation
Add Text to Run-AlValidation to indicate success or failure

1.0.15