@@ -8,6 +8,8 @@ Use CopySymbolsFromContainer in Run-AlCops
 Issue #1568 Add publisher parameter to Unpublish and Uninstall app
 Issue #1566 Sign-BcContainerApp doesn't work with SHA256
 Retry algorithm added to Sign-BcContainerApp
+Add Parameter -doNotPublishAdminPort to Setup-TraefikContainerForBcContainers
+Add Parameter -additionalParameters to Setup-TraefikContainerForBcContainers
 
 1.0.17
 Issue #1494 Creating another container based on existing artifact
